2007-04-12  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlobject.c: (gnl_object_remove_ghost_pad):
	Don't forget to unset the target when removing a ghost pad, else the
	target will still be linked to the no-longer-present-ghostpad internal
	pad.
	This is the "+500 power points" Jokosher bugfix.

2007-02-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  adapt to new AG_GST

2007-02-19  Wim Taymans  <wim@fluendo.com>

	* gnl/gnlcomposition.c: (no_more_pads_object_cb),
	(compare_relink_single_node), (update_pipeline):
	* gnl/gnlobject.c: (control_internal_pad),
	(gnl_object_ghost_pad_full):
	* gnl/gnlsource.c: (ghost_seek_pad):
	Fix some leaks.

2007-01-26  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Back to development cycle.

=== release 0.10.7 ===

2007-01-26   <>

	* configure.ac:
	* NEWS:
	* RELEASE:
	  releasing 0.10.7, "Anything better ?"

2007-01-24  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Bump requirement to GStreamer core 0.10.9
	pre-releasing gnonlin 0.10.6.2

2007-01-22  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlfilesource.c: (gnl_filesource_init):
	Use decodebin2 if the USE_DECODEBIN2 env variable is set.

2007-01-10  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_reset),
	(segment_done_main_thread), (seek_handling), (handle_seek_event),
	(gnl_composition_event_handler),
	(gnl_composition_ghost_pad_set_target), (convert_list_to_tree),
	(get_stack_list), (get_clean_toplevel_stack),
	(gnl_composition_change_state), (update_start_stop_duration),
	(no_more_pads_object_cb), (compare_relink_single_node),
	(compare_deactivate_single_node), (compare_relink_stack),
	(update_pipeline), (object_start_changed), (object_stop_changed),
	(object_priority_changed), (object_active_changed),
	(gnl_composition_add_object), (gnl_composition_remove_object):
	Add 'modify' boolean parameter to update_pipeline(). This is needed